# esp-gldrone

./: .gitignore  README_zsp.md  sdkconfig  sdkconfig.old
components/config/include/: config.h
components/core/crazyflie/hal/: CMakeLists.txt
components/core/crazyflie/hal/src/: sensors_mpu9250_lps25h.c  wifilink.c
components/core/crazyflie/modules/src/: crtp.c  crtp_commander_rpyt.c  sysload.c  system.c
components/drivers/general/motors/: motors.c
components/drivers/general/wifi/: wifi_esp32.c
components/drivers/i2c_devices/ak8963/: CMakeLists.txt  ak8963.c
components/drivers/i2c_devices/mpu6500/: CMakeLists.txt  mpu6500.c
components/drivers/i2c_devices/vl53l1/: zranger2.c
components/drivers/sbus/: CMakeLists.txt  sbus.c
components/drivers/sbus/include/: sbus.h
components/drivers/spi_devices/pmw3901/: flowdeck_v1v2.c
components/platform/: platform.h  platform_cf2.c
components/utils/: configblockeeprom.c
components/utils/include/: debug_cf.h
main/: main.c
